src/test/resources/entity_test/invalid/Employee6.entity

Employee6  aaaa { // Unexpected char(s) after entity name 
 id:integer; 
}